syntax = "proto3";

import "google/protobuf/any.proto";

package session.history.service;
option go_package = "protos/historypb;historypb";

service History {
  rpc GetBySessionID(GetBySessionIDRequest) returns (SessionHistoryResponse);
}

message GetBySessionIDRequest {
  string session_id = 1;
}

message SessionHistoryResponse {
  string session_id = 1;
  repeated SessionHistoryEvent events = 2;
}

// SessionHistoryEvent represents a row in the session_history table.
message SessionHistoryEvent {
  int64 id = 1;
  string member_id = 2;
  string event_type = 3;
  google.protobuf.Any event_data = 4;
  string created_at = 5;
}

// TransactionCreatedEventData describes the structure of the event data as seen in the database.
message TransactionCreatedEventData {
  string transaction_id = 1;
  repeated TransactionLine lines = 2;
}

message TransactionLine {
  string member_id = 1;
  double amount = 2;
}

message MemberRemovedEventData {
  string member_id = 1;
}
